cli: fix connecting to a hidden SSID with 'nmcli dev wifi connect' (bgo #752173)

We have to set 802-11-wireless.hidden=true to be able to connect to hidden SSIDs.
nmcli user indicates hidden SSID with 'hidden yes' parameter.

https://bugzilla.gnome.org/show_bug.cgi?id=752173